<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            style="@style/TableRowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/user_row_title_username" />

        <TextView
            android:id="@+id/username"
            style="@style/TableRowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TableRowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/user_row_title_email" />

        <TextView
            android:id="@+id/email"
            style="@style/TableRowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TableRowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/user_row_title_address" />

        <TextView
            android:id="@+id/address"
            style="@style/TableRowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TableRowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/user_row_title_phone" />

        <TextView
            android:id="@+id/phone"
            style="@style/TableRowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TableRowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/user_row_title_website" />

        <TextView
            android:id="@+id/website"
            style="@style/TableRowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/TableRowTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/user_row_title_company" />

        <TextView
            android:id="@+id/company"
            style="@style/TableRowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>


</TableLayout>
